fix the gap

--- a/src/pages/SingIn/SingIn.module.scss
+++ b/src/pages/SingIn/SingIn.module.scss
@@ -37,6 +37,7 @@
 
 .link {
     color: $Primary;
+    text-decoration: none;
 }
 
 .darkLink {
